# geoapis

./: .buildinfo  .gitignore  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/geoapis/: index.doctree
.doctrees/autoapi/geoapis/geometry/: index.doctree
.doctrees/autoapi/geoapis/lidar/: index.doctree
.doctrees/autoapi/geoapis/raster/: index.doctree
.doctrees/autoapi/geoapis/vector/: index.doctree
.github/: pull_request_template.md
.github/workflows/: linux-test.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/geoapis/: index.rst.txt
autoapi/: index.html
autoapi/geoapis/: index.html
autoapi/geoapis/geometry/: index.html
autoapi/geoapis/lidar/: index.html
autoapi/geoapis/raster/: index.html
autoapi/geoapis/vector/: index.html
docs/: conf.py  index.rst
src/: main.py
src/geoapis/: __init__.py  geometry.py  lidar.py  lidar_fetch.py  raster.py  vector.py  vector_fetch.py
tests/test_lidar/: instruction.json  test_case.py  test_lidar.py
tests/test_lidar_by_name/: instruction.json  test.py  test_lidar_by_name.py
tests/test_lidar_fetch/: instruction.json  test_lidar_fetch.py
tests/test_lidar_subfolders/: instruction.json  test.py  test_case.py  test_lidar_subfolders.py
tests/test_raster_linz_in_bounds/: instruction.json  test.py  test_raster_linz_in_bounds.py
tests/test_raster_lris_in_bounds/: instruction.json  test_case.py  test_raster_lris_in_bounds.py
tests/test_vector/: instruction.json  test_vector.py
tests/test_vector_fetch/: instruction.json  test_vector_fetch.py
tests/test_vector_in_bounds/: instruction.json  test_vector_in_bounds.py
tests/test_vector_linz/: instruction.json  test_case.py  test_vector_linz.py
tests/test_vector_linz_in_bounds/: instruction.json  test_case.py  test_vector_linz_in_bounds.py
tests/test_vector_lris/: instruction.json  test_case.py  test_vector_lris.py
tests/test_vector_lris_in_bounds/: instruction.json  test.py  test_vector_lris_in_bounds.py
tests/test_vector_stats_nz/: instruction.json  test_case.py  test_vector_stats_nz.py
tests/test_vector_stats_nz_in_bounds/: instruction.json  test_case.py  test_vector_stats_nz_in_bounds.py
(+4 files in other folders)
